--- a/contact.html
+++ b/contact.html
@@ -52,39 +52,19 @@
       </ul>
     </div>
   </nav>
-  <hr>
-  <h5>Career Objective :</h5>
-  <p>To work in a firm with a professional work driven environment where I can utilize and apply my knowledge, skills which would enable me as a fresh graduate to grow while fulfilling organizational goals.</p>
-  <hr>
-  <p>
-    <h5>Education :</h5>
-  </p>
-  <table id="qual">
-    <tr>
-      <th>Qualification</th>
-      <th>Board/Institue</th>
-      <th>year</th>
-      <th>percentage</th>
-    </tr>
-    <tr>
-      <td>B.tech</td>
-      <td>S.V University</td>
-      <td>2015-2019</td>
-      <td>65.3%</td>
-    </tr>
-    <tr>
-      <td>Intermediate</td>
-      <td>Narayana Junior College</td>
-      <td>2013-2015</td>
-      <td>77.3%</td>
-    </tr>
-    <tr>
-      <td>SSC</td>
-      <td>Keshava Reddy Concept School</td>
-      <td>2013</td>
-      <td>65.3%</td>
-    </tr>
-  </table>
+  <br>
+    <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        K.Rohith
+        <br>rohithkalluru@gmail.com
+      </div>
+      <div class="col-sm">
+        Contact No:+91 8686567431
+        <br>S.V University, Tirupati - 517505
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
