--- a/achieve.html
+++ b/achieve.html
@@ -22,6 +22,7 @@
           <img
             src="https://drudqa.dm.files.1drv.com/y4mQwnEnKt8hit_hCcwNFQzQCz4l1WhTfxdBz3RXiDEkn7On1yknZGcM1l8aHyb8rgm13mdK4Oi3_oG_F7QDmZHvnrgW8-Ynd-WZ448bUKQNkEsC4UN7ZNhEutDs0nPeqXF5PYEjZMsw-Q9degmVXS8NJzO8AV2HMVc7veyx5GZiucyF_830uwA1nQJDdqPkSTCi7DGTwNJMPRu0zQr2GFlBQ?width=480&height=660&cropmode=none"
             alt="rohith.jpg" width="100">
+            <br>
         </center>
       </div>
     </div>
@@ -52,39 +53,15 @@
       </ul>
     </div>
   </nav>
-  <hr>
-  <h5>Career Objective :</h5>
-  <p>To work in a firm with a professional work driven environment where I can utilize and apply my knowledge, skills which would enable me as a fresh graduate to grow while fulfilling organizational goals.</p>
-  <hr>
-  <p>
-    <h5>Education :</h5>
-  </p>
-  <table id="qual">
-    <tr>
-      <th>Qualification</th>
-      <th>Board/Institue</th>
-      <th>year</th>
-      <th>percentage</th>
-    </tr>
-    <tr>
-      <td>B.tech</td>
-      <td>S.V University</td>
-      <td>2015-2019</td>
-      <td>65.3%</td>
-    </tr>
-    <tr>
-      <td>Intermediate</td>
-      <td>Narayana Junior College</td>
-      <td>2013-2015</td>
-      <td>77.3%</td>
-    </tr>
-    <tr>
-      <td>SSC</td>
-      <td>Keshava Reddy Concept School</td>
-      <td>2013</td>
-      <td>65.3%</td>
-    </tr>
-  </table>
+  <br>
+  <div class="achieve">
+    <p><b>ACHIEVEMENTS :</b></p>
+    <ul>
+      <li>Published an article in an international Journal (IJERECE - Vol 4,Issue 3,March 2017), ISSN (Online) 2394-6849</li>
+      <li>Qualified in the Jio Digital Champions program and selected as an intern</li>
+      <li>Actively participated in Telecom Essentials Course offered by Ericsson India Global Services Pvt. Ltd</li>
+      <li>Actively participated in BSNL inplant training program</li>
+      <li>Completed a 2-day project based training program on 3D Printing conducted by Skyfi Labs Center, Banglore</li>
+    </ul>
+  </div>
 </body>
-
-</html>
