--- a/activities.html
+++ b/activities.html
@@ -11,7 +11,6 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
   <div id="carouselExampleSlidesOnly" class="head" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -22,11 +21,11 @@
           <img
             src="https://drudqa.dm.files.1drv.com/y4mQwnEnKt8hit_hCcwNFQzQCz4l1WhTfxdBz3RXiDEkn7On1yknZGcM1l8aHyb8rgm13mdK4Oi3_oG_F7QDmZHvnrgW8-Ynd-WZ448bUKQNkEsC4UN7ZNhEutDs0nPeqXF5PYEjZMsw-Q9degmVXS8NJzO8AV2HMVc7veyx5GZiucyF_830uwA1nQJDdqPkSTCi7DGTwNJMPRu0zQr2GFlBQ?width=480&height=660&cropmode=none"
             alt="rohith.jpg" width="100">
+            <br>
         </center>
       </div>
     </div>
   </div>
-
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">My Profile</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,39 +51,13 @@
       </ul>
     </div>
   </nav>
-  <hr>
-  <h5>Career Objective :</h5>
-  <p>To work in a firm with a professional work driven environment where I can utilize and apply my knowledge, skills which would enable me as a fresh graduate to grow while fulfilling organizational goals.</p>
-  <hr>
-  <p>
-    <h5>Education :</h5>
-  </p>
-  <table id="qual">
-    <tr>
-      <th>Qualification</th>
-      <th>Board/Institue</th>
-      <th>year</th>
-      <th>percentage</th>
-    </tr>
-    <tr>
-      <td>B.tech</td>
-      <td>S.V University</td>
-      <td>2015-2019</td>
-      <td>65.3%</td>
-    </tr>
-    <tr>
-      <td>Intermediate</td>
-      <td>Narayana Junior College</td>
-      <td>2013-2015</td>
-      <td>77.3%</td>
-    </tr>
-    <tr>
-      <td>SSC</td>
-      <td>Keshava Reddy Concept School</td>
-      <td>2013</td>
-      <td>65.3%</td>
-    </tr>
-  </table>
+  <br>
+  <div class="act">
+    <p><b>CO-/EXTRA–CURRICULAR ACTIVITIES :</b></p>
+    <ul>
+      <li>Organizing Member in Sigmoid (Technical fest of E.C.E department) in our college</li>
+      <li>Representative member of ©British Council India in our college</li>
+      <li>Representative member of Institute of Language Management (ILM) in Keshava reddy concept school</li>
+    </ul>
+  </div>
 </body>
-
-</html>
